⬆️ Update dependency vue 2.0
Signed-off-by: Jakub Juszczak <netghost03@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Vue-ChartJs</title>
   </head>
   <body>
+  <div id="app">
     <app></app>
+  </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
